# iris

./: .gitignore  AGENTS.md  CLAUDE.md  HERMES_AGENTUI_PLATFORM_PLAN.md  HERMES_AGENTUI_STREAMING_PLAN.md  IRIS_CODE_AUDIT_2026-05-10.md  README.md  package-lock.json  package.json  skills-mockup.html
.plans/: 2026-05-12-automations-audit-and-future-state.md  2026-05-12-automations-foundational-changes.md  2026-05-12-consolidate-sidebar-collapse-state-hooks.md  2026-05-12-iris-install-release-and-compat-floor.md  2026-05-13-shadcn-component-migration-audit.md  2026-05-14-iris-token-consolidation-and-legacy-purge-revised.md  2026-05-19-bundled-core-and-remote-mac-connections.md  2026-05-20-gateway-control-and-runtime-readiness.md  2026-05-21-agent-profile-skills-management.md  2026-05-21-agent-views-layout-consistency.md  2026-05-21-hermes-memory-revision-history.md  2026-05-21-hermes-profile-management-completion.md  2026-05-21-routing-deep-linking-and-route-persistence.md  2026-05-22-css-architecture-cleanup.md  2026-05-24-mobile-app-expo-prep.md  2026-05-31-chat-delivery-reliability-overhaul.md
agentui-platform/: README.md  adapter.py  plugin.yaml
desktop/: PROJECT_STATUS.md  README.md  index.html  package.json  vite.config.ts
docs/: communication-map.html  (+2 more)
sidecar/: README.md  pyproject.toml
sidecar/src/hermes_management_server/: __init__.py  conversations.py  core_store.py  hermes_store.py  inbox_store.py  main.py  models.py  runtime_registry.py  security.py
sidecar/src/hermes_management_server/runtime_adapters/: __init__.py  base.py  hermes.py  hermes_conversations.py  hermes_store.py
sidecar/tests/: test_api.py  test_conversations.py  test_core_store.py  test_profiles.py  test_security.py
(+472 files in other folders)
