[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-agent-sidecar"
version = "0.1.0"
description = "Read-only FastAPI sidecar for local Hermes Agent profiles."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Hermes Management Server Contributors" }
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8",
  "pytest-cov>=5",
]
yaml = [
  "PyYAML>=6",
]

[project.scripts]
hermes-sidecar = "hermes_management_server.main:cli"
hermes-management-server = "hermes_management_server.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
