[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-core"
version = "0.1.0"
description = "Local-first Iris Core service with a Hermes runtime adapter."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Iris Core Contributors" }
]
dependencies = [
  "fastapi>=0.110",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8",
  "pytest-cov>=5",
]
yaml = [
  "PyYAML>=6",
]

[project.scripts]
iris-core = "hermes_management_server.main:cli"
hermes-sidecar = "hermes_management_server.main:cli"
hermes-management-server = "hermes_management_server.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
